[package]
name = "hsm0-with-executor"
version = "0.7.0"
authors.workspace = true
edition.workspace = true
license.workspace = true


[dependencies]
custom-logger = { git = "https://github.com/winksaville/custom-logger", version = "0.1.0" }
log = { version = "0.4.17", features = ["release_max_level_off"] }
