[package]
name = "proc_macro_hsm1"
version = "0.3.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["extra-traits", "full", "parsing", "visit-mut"] }
quote = "1.0"
proc-macro2 = "1.0"
state_result = { path = "../state_result" }

[dev-dependencies]
criterion = "0.4"
#iai = "0.1.1"

[[bench]]
name = "bench-dispatch"
harness = false

# I've found iai hard to trust so not using for now.
# To try these enable this [[bench]] and rename
# bench-dispatch-iai.rs.not-used to bench-dispatch-iai.rs.
#[[bench]]
#name = "bench-dispatch-iai"
#harness = false

